--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,10 +19,13 @@ body {
   background: -webkit-linear-gradient(315deg, #044f48, #2a7561);
   background: linear-gradient(135deg, #044f48, #2a7561);
   background-size: cover;
-  font-family: 'Open Sans', sans-serif;
-  font-size: 12px;
+/*  font-family: 'Open Sans', sans-serif;
+  font-size: 12px;*/
   line-height: 1.3;
   overflow: hidden;
+
+  font-family: 'hello_typeregular', sans-serif;
+  font-size: 12px;
 }
 
 .bg {
@@ -31,20 +34,22 @@ body {
   top: 0;
   left: 0;
   z-index: 1;
-  background: url("https://images.unsplash.com/photo-1451186859696-371d9477be93?crop=entropy&fit=crop&fm=jpg&h=975&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=1925") no-repeat 0 0;
-  -webkit-filter: blur(80px);
-          filter: blur(80px);
-  -webkit-transform: scale(1.2);
-          transform: scale(1.2);
+  background: url("../images/fondbot.png") no-repeat center 100%;
+/*  background-color: #0089ae; */
+  -webkit-filter: blur(0px);
+          filter: blur(0px);
+  -webkit-transform: scale(1);
+          transform: scale(1);
 }
+
 
 /*--------------------
 Chat
 --------------------*/
 .chat {
   position: absolute;
-  top: 50%;
-  left: 50%;
+  bottom: -240px;
+  right: -130px;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   width: 300px;
@@ -52,9 +57,9 @@ Chat
   max-height: 500px;
   z-index: 2;
   overflow: hidden;
-  box-shadow: 0 5px 30px rgba(0, 0, 0, 0.2);
-  background: rgba(0, 0, 0, 0.5);
-  border-radius: 20px;
+  box-shadow: 0 20px 120px rgba(0, 0, 0, 0.9);
+  background: rgba(255, 255, 255, 1);
+  border-radius: 10px;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -80,15 +85,16 @@ Chat Title
           flex: 0 1 45px;
   position: relative;
   z-index: 2;
-  background: rgba(0, 0, 0, 0.2);
-  color: #fff;
+  background: rgba(0, 128, 166, 0.4);
+  color: #333;
   text-transform: uppercase;
   text-align: left;
   padding: 10px 10px 10px 50px;
 }
 .chat-title h1, .chat-title h2 {
+  font-family: 'hello_typebold', sans-serif;
+  font-size: 17px;  
   font-weight: normal;
-  font-size: 10px;
   margin: 0;
   padding: 0;
 }
@@ -140,13 +146,19 @@ Messages
   float: left;
   padding: 6px 10px 7px;
   border-radius: 10px 10px 10px 0;
-  background: rgba(0, 0, 0, 0.3);
+/*  background: rgba(0, 0, 0, 0.3);*/
+/*  background: #fff;*/
+  background: -webkit-linear-gradient(#0ad2e1, #0080a6);
+  background: linear-gradient(#0ad2e1, #0080a6);
+  color:#fff;
   margin: 8px 0;
-  font-size: 11px;
+/*  font-size: 11px;*/
+  font-size: 13px;
   line-height: 1.4;
   margin-left: 35px;
   position: relative;
-  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+  max-width:230px;
+/*  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.2);*/
 }
 .messages .message .timestamp {
   position: absolute;
@@ -158,7 +170,7 @@ Messages
   content: '';
   position: absolute;
   bottom: -6px;
-  border-top: 6px solid rgba(0, 0, 0, 0.3);
+  border-top: 6px solid #0080a6;
   left: 0;
   border-right: 7px solid transparent;
 }
@@ -183,8 +195,9 @@ Messages
   float: right;
   color: #fff;
   text-align: right;
-  background: -webkit-linear-gradient(330deg, #248A52, #257287);
-  background: linear-gradient(120deg, #248A52, #257287);
+  background: -webkit-linear-gradient(#e17d87, #e15a64);
+  background: linear-gradient(#e17d87, #e15a64);  
+/*  background-color: #0078FF;*/
   border-radius: 10px 10px 0 10px;
 }
 .messages .message.message-personal::before {
@@ -192,7 +205,7 @@ Messages
   right: 0;
   border-right: none;
   border-left: 5px solid transparent;
-  border-top: 4px solid #257287;
+  border-top: 4px solid #e15a64;
   bottom: -4px;
 }
 .messages .message:last-child {
@@ -217,7 +230,8 @@ Messages
   width: 3px;
   height: 3px;
   border-radius: 50%;
-  background: rgba(255, 255, 255, 0.5);
+/*  background: rgba(255, 255, 255, 0.5);*/
+  background: #fff;
   z-index: 2;
   margin-top: 4px;
   -webkit-animation: ball 0.45s cubic-bezier(0, 0, 0.15, 1) alternate infinite;
@@ -231,6 +245,8 @@ Messages
   font-size: 0;
   width: 20px;
   height: 10px;
+/*  background:#fff;*/
+  color:#fff;
   position: relative;
 }
 .messages .message.loading span::before {
@@ -244,7 +260,9 @@ Messages
   width: 3px;
   height: 3px;
   border-radius: 50%;
-  background: rgba(255, 255, 255, 0.5);
+/*  background: rgba(255, 255, 255, 0.5);*/
+  background: #fff;
+
   z-index: 2;
   margin-top: 4px;
   -webkit-animation: ball 0.45s cubic-bezier(0, 0, 0.15, 1) alternate infinite;
@@ -262,7 +280,8 @@ Messages
   width: 3px;
   height: 3px;
   border-radius: 50%;
-  background: rgba(255, 255, 255, 0.5);
+/*  background: rgba(255, 255, 255, 0.5);*/
+  background: #fff;
   z-index: 2;
   margin-top: 4px;
   -webkit-animation: ball 0.45s cubic-bezier(0, 0, 0.15, 1) alternate infinite;
@@ -281,7 +300,8 @@ Message Box
       -ms-flex: 0 1 40px;
           flex: 0 1 40px;
   width: 100%;
-  background: rgba(0, 0, 0, 0.3);
+  color:#000;
+  background: rgba(0, 128, 166, 0.4);
   padding: 10px;
   position: relative;
 }
@@ -290,7 +310,7 @@ Message Box
   border: none;
   outline: none !important;
   resize: none;
-  color: rgba(255, 255, 255, 0.7);
+  color: #333;
   font-size: 11px;
   height: 17px;
   margin: 0;
@@ -305,9 +325,9 @@ Message Box
   z-index: 1;
   top: 9px;
   right: 10px;
+  background: #0080a6;
   color: #fff;
   border: none;
-  background: #248A52;
   font-size: 10px;
   text-transform: uppercase;
   line-height: 1;
@@ -318,7 +338,8 @@ Message Box
   transition: background .2s ease;
 }
 .message-box .message-submit:hover {
-  background: #1D7745;
+  background: #e15a64;
+
 }
 
 /*--------------------
@@ -335,7 +356,7 @@ Custom Srollbar
 }
 
 .mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar {
-  background-color: rgba(0, 0, 0, 0.5) !important;
+  background-color: #0089ae !important;
 }
 
 /*--------------------
