--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,14 +16,12 @@ body {
 }
 
 body {
-  background: -webkit-linear-gradient(315deg, #044f48, #2a7561);
-  background: linear-gradient(135deg, #044f48, #2a7561);
+  background-color: #7d7d7d;
   background-size: cover;
 /*  font-family: 'Open Sans', sans-serif;
   font-size: 12px;*/
   line-height: 1.3;
   overflow: hidden;
-
   font-family: 'hello_typeregular', sans-serif;
   font-size: 12px;
 }
@@ -33,13 +31,10 @@ body {
   height: 100%;
   top: 0;
   left: 0;
-  z-index: 1;
-  background: url("../images/fondbot.png") no-repeat center 100%;
-/*  background-color: #0089ae; */
-  -webkit-filter: blur(0px);
-          filter: blur(0px);
-  -webkit-transform: scale(1);
-          transform: scale(1);
+  background-image: url("../images/fondbot.png");
+  background-position: top center;
+  background-size: 100% auto;
+  background-repeat: no-repeat;
 }
 
 
@@ -138,7 +133,7 @@ Messages
   position: absolute;
   top: 0;
   left: 0;
-  height: 101%;
+  height: 100%;
   width: 100%;
 }
 .messages .message {
